--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -50,7 +50,7 @@
 .work__item-thumb {
     height:auto;
 }
-..work__item-name {
+.work__item-name {
     height:35px
 }
 .work__item-link:hover:after {
