--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -52,13 +52,14 @@
     width:auto;
     margin:20px 0 0
 }
+.work__list {
+    padding:0 20px;
+}
 .work__item {
     float:none;
     width:auto;
-    height:auto;
-    border-top:1px solid #777;
-    border-bottom:1px solid #777;
-    margin-top:30px;
+    height:185px;
+    margin:20px 0 0
 }
 .work__item:first-child {
     margin-top:0
